[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/main-menu/main-buttons.gd" type="Script" id=1]

[node name="main-buttons" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quickplay" type="Button" parent="."]
margin_right = 1024.0
margin_bottom = 47.0
text = "quick play"

[node name="settings" type="Button" parent="."]
margin_top = 63.0
margin_right = 1024.0
margin_bottom = 110.0
text = "settings"

[node name="controls" type="Button" parent="."]
margin_top = 126.0
margin_right = 1024.0
margin_bottom = 173.0
text = "controls"

[node name="exit" type="Button" parent="."]
margin_top = 189.0
margin_right = 1024.0
margin_bottom = 236.0
text = "exit"

[connection signal="pressed" from="quickplay" to="." method="_on_quickplay_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
